Contact Info Changed

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </div>
 
   <footer>
-    <a href="https://johnathanfermon.github.io/CapstoneProjectWEB/Pages/Card.html" target="_blank">
+    <a href="https://johnathanfermon.github.io/Portfolio/Pages/Card.html" target="_blank">
       <button class="contact-btn">Contact</button>
     </a>
   </footer>
